Fixed alignment of stock ticker on landing page

--- a/client/src/components/Styles/Landing/landing.css
+++ b/client/src/components/Styles/Landing/landing.css
@@ -290,7 +290,7 @@ select::-ms-expand {
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
+  justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
